Update index.html with SEO enhancements, add book icon, and create robots.txt

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" name="robots" content="index, follow" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/book-icon.png"> <!-- Add this line -->
+  <link rel="canonical" href="https://magidyaakov.netlify.app/#read" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> palabras a iaakov | מגיד דבריו ליעקב </title>
+  <meta name="description"
+    content="Explore the teachings of the Maguid of Mezritch. Discover insights into Chassidut and the Maguid's books." />
+  <meta name="keywords"
+    content="maguid , palabras a iaakov , maguid iaakov, , ספרי המגיד , חסידות , המגיד ממעזריטש , ספרי המגיד ממעזריטש" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
